--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://00drconsultora.github.io/",
+  "homepage": "https://00drconsultora.github.io/covello/src/",
   "name": "landing-page",
   "version": "0.0.0",
   "scripts": {
