--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "scripts": {
     "ng": "ng",
     "start": "npm run postbuild:local && ng serve",
-    "build": "ng build --configuration production --base-href /covello/",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:landing-page": "node dist/landing-page/server/server.mjs",
+    "serve:ssr:landing-page": "node dist/server/server.mjs",
     "postbuild:local": "node set-base-href.js /",
     "postbuild:ghpages": "node set-base-href.js /covello/",
-    "build:local": "npm run build && npm run postbuild:local",
-    "build:ghpages": "npm run build && npm run postbuild:ghpages",
+    "build:local": "ng build --configuration production && npm run postbuild:local",
+    "build:ghpages": "ng build --configuration production --base-href /covello/ && npm run postbuild:ghpages",
     "deploy": "npm run build:ghpages && npx angular-cli-ghpages --dir=dist/landing-page"
   },
   "private": true,
