--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/landing-page",
+            "outputPath": "docs",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -53,7 +53,7 @@
                 }
               ],
               "outputHashing": "all",
-              "outputPath": "dist/landing-page"
+              "outputPath": "docs"
             },
             "development": {
               "optimization": false,
