--- a/angular.json
+++ b/angular.json
@@ -53,7 +53,14 @@
                 }
               ],
               "outputHashing": "all",
-              "outputPath": "docs"
+              "outputPath": "docs",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
+              "baseHref": "/covello/"
             },
             "development": {
               "optimization": false,
